<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="40dp"
              android:paddingRight="40dp"
              android:gravity="center_vertical"
              android:background="@color/primary">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginBottom="30dp"/>

        <EditText android:id="@+id/login_edit_text"
                  android:singleLine="true"
                android:hint="Login"
                style="@style/LoginText"/>

        <EditText android:id="@+id/password_edit_text"
                android:inputType="textPassword"
                android:hint="Senha"
                style="@style/LoginText"/>

        <Button android:id="@+id/login_button"
                android:text="Entrar"
                android:layout_marginTop="30dp"
                style="@style/LoginButton"
                android:background="@drawable/button"/>

    </LinearLayout>
</LinearLayout>