<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".AppActivity"
              android:orientation="vertical"
              android:gravity="center_vertical"
              android:background="@color/book_list_background">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/books_recycler_view"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        style="@style/ViewWithPadding"/>

    <ProgressBar
            android:id="@+id/books_progress_bar"
            style="@style/AppTheme.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/empty_books_list_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_dark"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/message_book_list_empty"/>

    </LinearLayout>

</LinearLayout>
